<resources>
    <string name="app_name">PhysicsWhileDriving</string>
    <string name="title_box">Calculate Coefficient of Drag</string>
    <string name="button_start">START</string>
    <string name="initial_speed">0.0 mph</string>
    <string name="unregistered_mph">-- mph</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="inst_speed">Instantaneous Speed:</string>
    <string name="time_elapsed">Total time elapsed:\u0020</string>
    <string name="start_calc">START CALCULATING</string>
    <string name="accelerate_instruction">Accelerate above 55 mph SAFELY!\nCurrent speed:\u0020</string>
    <string name="above_55">You\'re above 55 mph! Shift into neutral\nCurrent Speed:\u0020</string>
    <string name="default_mph">\u0020mph</string>
    <string name="Pause">Pause</string>
    <string name="Stop">Stop</string>
    <string name="Resume">Resume</string>
</resources>
